[package]
name = "ruspiro-uart"
authors = ["André Borrmann <pspwizard@gmx.de>"]
version = "0.3.1" # remember to update html_root_url
description = """
Simple and convinient access API to the Raspberry Pi 3 UART0 (PL011) and UART1 (miniUART)
peripherals
"""
license = "Apache-2.0"
repository = "https://github.com/RusPiRo/ruspiro-uart/tree/v0.3.1"
documentation = "https://docs.rs/ruspiro-uart/0.3.1"
readme = "README.md"
keywords = ["RusPiRo", "uart", "baremetal", "raspberrypi"]
categories = ["no-std", "embedded"]
edition = "2018"

[badges]
travis-ci = { repository = "RusPiRo/ruspiro-uart", branch = "master" }
maintenance = { status = "actively-developed" }

[lib]

[dependencies]
ruspiro-core = { path = "../core" }
ruspiro-singleton = { path = "../singleton" }
ruspiro-error = { path = "../error" }
ruspiro-gpio-hal = { path = "../gpio-hal" }
ruspiro-gpio = { version = "0.4" }
ruspiro-register = { version = "0.4" }
ruspiro-timer = { version = "0.4" }
ruspiro-console = { version = "0.3" }
ruspiro-interrupt = { version = "0.3", features = ["ruspiro_pi3"] }
#ruspiro-talents = { path = "../talents" }

[features]
ruspiro_pi3 = [
    "ruspiro-gpio/ruspiro_pi3",
    "ruspiro-timer/ruspiro_pi3"
]
